--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 
-<!-- Mirrored from pixner.net/deskoto/main/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Feb 2021 12:21:52 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Deskoto - HelpDesk and Knowledge Base HTML Template</title>
+    <title>UNAZ - Unaz Services</title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all.min.css">
@@ -44,86 +44,24 @@
                             <img src="assets/images/logo/logo.png" alt="logo">
                         </a>
                     </div>
-                    <div class="support">
+                    <!-- <div class="support">
                         <a href="#0">Help Center</a>
-                    </div>
+                    </div> -->
                 </div>
                 <ul class="menu">
-                    <li>
+                    <li class="navlist ">
                         <a href="index.html">Home</a>
-                        <!-- <ul class="submenu">
-                            <li>
-                                <a href="index.html">Home One</a>
-                            </li>
-                            <li>
-                                <a href="index-2.html">Home Two</a>
-                            </li>
-                            <li>
-                                <a href="index-3.html">Home Three</a>
-                            </li>
-                            <li>
-                                <a href="index-4.html">Home Four</a>
-                            </li>
-                            <li>
-                                <a href="index-5.html">Home Five</a>
-                            </li>
-                            <li>
-                                <a href="index-6.html">Home Six</a>
-                            </li>
-                        </ul> -->
                     </li>
-                    <!-- <li>
-                        <a href="#0">Changelog</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="changelog.html">Changelog</a>
-                            </li>
-                            <li>
-                                <a href="changelog-2.html">Changelog Single</a>
-                            </li>
-                        </ul>
-                    </li> -->
-                    <li>
-                        <a href="#0">Pages</a>
-                        <ul class="submenu">
-                            <li>
-                                <a href="about.html">About</a>
-                            </li>
-                            <!-- <li>
-                                <a href="category-1.html">Category</a>
-                            </li>
-                            <li>
-                                <a href="category-2.html">Category Single</a>
-                            </li>-->
-                            <li>
-                                <a href="knowledge-based.html">Knowledge Based</a>
-                            </li>
-                            <li>
-                                <a href="knowledge-based-single.html">Knowledge Based Single</a>
-                            </li>
-                            <!-- <li>
-                                <a href="faq.html">Faqs</a>
-                            </li>  -->
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                            <!-- <li>
-                                <a href="404.html">404 Error</a>
-                            </li> -->
-                        </ul>
+                    <li class="navlist">
+                        <a href="faq.html">Faqs</a>
                     </li>
-                    <li class="d-md-none text-center">
-                        <a href="#0" class="m-0 header-button">Submit a Request</a>
+                    <li class="navlist">
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li class="navlist navactive">
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
-                <div class="header-bar d-lg-none">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="header-right">
-                    <a href="#0" class="header-button d-none d-md-inline-block">Submit a Request</a>
-                </div>
             </div>
         </div>
     </header>
@@ -156,15 +94,16 @@
                         <div class="contact-info-item">
                             <a href="Tel:0123012015200">
                                 <img src="assets/images/contact/01.png" alt="contact">
-                                <span>(92)41-8401701</span>
+                                <span>(92)923-644012</span>
                             </a>
                         </div>
                         <div class="contact-info-item">
                             <a href="Mailto:contact@deskoto.com">
                                 <img src="assets/images/contact/02.png" alt="contact">
-                                <span>admin@aiksol.com</span>
+                                <span>1st Floor UNAZ Plaza, Opposite Nowshera Kanta, Nowshera Mardan Road, Kabul River Nowshera City</span>
                             </a>
                         </div>
+                        
                     </div>
                 </div>
                 <form class="contact-form row" id="contact_form_submit">
@@ -239,7 +178,8 @@
                                     <a href="#0">Help Center</a>
                                 </div>
                             </div>
-                            <p>Deskoto is a Support & Help Center Template to create your own 24/7 self-service customer support center.</p>
+                            <p> UNAZ is a saas application which helps you to automate you
+                                business and find solution to your problems.</p>
                             <ul class="social-icons">
                                 <li>
                                     <a href="#0"><i class="fab fa-facebook-f"></i></a>
@@ -261,39 +201,32 @@
                             <h5 class="title">Menu</h5>
                             <ul>
                                 <li>
-                                    <a href="#0">Category Pages</a>
+                                    <a href="index.html">Home</a>
+                                </li>
+
+                                <li>
+                                    <a href="faq.html">Faqs</a>
                                 </li>
                                 <li>
-                                    <a href="#0">FAQ Individual Page</a>
+                                    <a href="about.html">About Us</a>
                                 </li>
                                 <li>
-                                    <a href="#0">Changelog Page</a>
-                                </li>
-                                <li>
-                                    <a href="#0">Support Page</a>
-                                </li>
-                                <li>
-                                    <a href="#0">404 Not Found</a>
-                                </li>
-                                <li>
-                                    <a href="#0">Password Protected</a>
+                                    <a href="contact.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-8 col-lg-4">
                         <div class="footer-widget widget-newsletter">
-                            <h5 class="title">Newsletter</h5>
-                            <form class="newsletter-form">
-                                <input type="text" placeholder="Enter Your Email" name="email">
-                                <button type="submit">Subscribe</button>
-                            </form>
+                            <iframe style="border-radius: 10px;"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.130907594492!2d71.98471161521408!3d34.014850580616205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDAwJzUzLjUiTiA3McKwNTknMTIuOCJF!5e0!3m2!1sen!2s!4v1614070265702!5m2!1sen!2s"
+                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom cl-white">
-                <p>Copyright &copy; 2020 <a href="#0">Deskoto</a> - Designed by <a href="#0">UIAXIS</a></p>
+                <p>Copyright &copy; 2021 <a href="#0">UNAZ</a> - Designed by <a href="https://aiksol.com">AIKSOL</a></p>
             </div>
         </div>
     </footer>
