--- a/changelog.html
+++ b/changelog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from pixner.net/deskoto/main/changelog.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Feb 2021 12:20:38 GMT -->
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -266,7 +266,7 @@
                 </div>
             </div>
             <div class="footer-bottom cl-white">
-                <p>Copyright &copy; 2020 <a href="#0">Deskoto</a> - Designed by <a href="#0">UIAXIS</a></p>
+                <p>Copyright &copy; 2021 <a href="#0">UNAZ</a> - Designed by <a href="https://aiksol.com">AIKSOL</a></p>
             </div>
         </div>
     </footer>
