--- a/about.html
+++ b/about.html
@@ -74,10 +74,11 @@
         <div class="container">
             <div class="hero-content cl-white">
                 <h1 class="title">About UNAZ</h1>
-                <p>UNAZ SERVICES is specialized firm of Software solution, Stock Take Solution, Technical Solutions,
-                    Legal Advisory and Financial Management Consultants.
-                    Mission To contribute to the standardized educational mission by consistent operational execution
-                    through fantastic people to the potential seekers in a dynamic institution with great standards</p>
+                <p>UNAZ Services is a specialized Firm of Legal Advisors, Technical Consultants providing services in
+                    the fields of Software solutions, Stock Take Solutions, Technical Solutions, Legal Advisory and as
+                    Financial Management Consultants. Trying our best to contribute to the standardized educational,
+                    Legal and Business sectors by consistent operational execution through fantastic people to the
+                    potential seekers in a dynamic institution with great standard. </p>
             </div>
         </div>
     </div>
@@ -120,7 +121,7 @@
                             <a href="#0"><img src="assets/images/team/team3.png" alt="team"></a>
                         </div>
                         <div class="team-content">
-                            <h5 class="title"><a href="#0">Noor-Ul-Hudda</a></h5>
+                            <h5 class="title"><a href="#0">Obaid Ur Rehman</a></h5>
                             <span>Full-Stack Developer</span>
                         </div>
                     </div>
