--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
             <div class="banner-content-2 mw-100">
                 <h1 class="title cl-white">Unaz Services</h1>
                 <p class="cl-white">
-                    UNAZ SERVICES is specialized firm of Software solution, Stock Take Solution, Technical Solutions,
-                    Legal Advisory and Financial Management Consultants.
-                    Mission To contribute to the standardized educational mission by consistent operational execution
-                    through fantastic people to the potential seekers in a dynamic institution with great standards
+                    UNAZ Services is a specialized Firm of Legal Advisors, Technical Consultants providing services in
+                    the fields of Software solutions, Stock Take Solutions, Technical Solutions, Legal Advisory and as
+                    Financial Management Consultants. Trying our best to contribute to the standardized educational,
+                    Legal and Business sectors by consistent operational execution through fantastic people to the
+                    potential seekers in a dynamic institution with great standard.
                 </p>
             </div>
         </div>
