chnages on contact us and about us page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="navlist">
-                        <a href="faq.html">Faqs</a>
+                        <a href="faq.html">Services</a>
                     </li>
                     <li class="navlist">
                         <a href="about.html">About Us</a>
@@ -412,7 +412,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="faq.html">Faqs</a>
+                                    <a href="faq.html">Services</a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us</a>
