--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="navlist">
-                        <a href="faq.html">Faqs</a>
+                        <a href="faq.html">Services</a>
                     </li>
                     <li class="navlist navactive">
                         <a href="about.html">About Us</a>
@@ -89,10 +89,57 @@
     <section class="team-section padding-bottom padding-top">
         <div class="container">
             <div class="section-header mw-100">
-                <h2 class="title">Your professional Support Team</h2>
-                <p>We are here to stand you by. Contact us if you need any help.</p>
+                <h2 class="title">Our Vision</h2>
+                <p>To be a world-class institution providing innovative and reliable services primarily to the Legal,
+                    Businesses and financial markets, stimulating business growth and maximizing benefits for all
+                    stakeholders.</p>
             </div>
-            <div class="row justify-content-center mb-30-none">
+            <div class="section-header mw-100">
+                <h2 class="title">Our Mission</h2>
+                <p>To provide secure, reliable, and innovative solutions to automate and systematically reduce the risk
+                    of losses as well as mismanagement or waste of time and to enable transparency with the introduction
+                    of more efficiencies to the Financial, Educational and Legal markets through introducing of
+                    state-of-the-art technology and talent to the country with excellent corporate governance and to
+                    provide a fantastic environment to employees and market partners to grow personally and
+                    professionally.</p>
+            </div>
+            <div class="section-header mw-100">
+                <h2 class="title">Values</h2>
+                <p>Our values are our assets and we strongly believe in sustainable development with the honour of our
+                    commitments to the clients, valuable resources, employees, and users.</p>
+                <div class="row">
+                    <div class="aboutcontent col-lg-6 col-md-6 col-sm-6 col-6">
+                        <h4 class="title">Reliability</h4>
+                        <p class="aboutcontent">• Fair & honest in all our dealings</p>
+                        <p class="aboutcontent">• Take responsibility for our actions</p>
+                        <p class="aboutcontent">• Strive to perform to the best of our abilities.</p>
+                    </div>
+                    <div class="aboutcontent col-lg-6 col-md-6 col-sm-6 col-6">
+                        <h4 class="title">Integrity</h4>
+                        <p class="aboutcontent">• Fair & honest in all our dealings</p>
+                        <p class="aboutcontent">• Take responsibility for our actions</p>
+                        <p class="aboutcontent">• Strive to perform to the best of our abilities</p>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="aboutcontent col-lg-6 col-md-6 col-sm-6 col-6">
+                        <h4 class="title">Transparency</h4>
+                        <p class="aboutcontent">• Policies & procedures are clearly defined, well communicated, and applied
+                            equally to all.</p>
+                        <p class="aboutcontent">• Make adequate disclosure of company information.</p>
+                        <P class="aboutcontent">• Strong adherences to the best practices of code of conducts in all the
+                            relevant fields</P>
+                    </div>
+                    <div class="aboutcontent col-lg-6 col-md-6 col-sm-6 col-6">
+                        <h4 class="title">Teamwork</h4>
+                        <p class="aboutcontent">• Build strong relationships within and across functions.</p>
+                        <P class="aboutcontent">• Share ideas / best practices and value diversity.</P>
+                        <P class="aboutcontent">• Communicate candidly and on an ongoing basis within team.</P>
+                    </div>
+
+                </div>
+            </div>
+            <!-- <div class="row justify-content-center mb-30-none">
                 <div class="col-sm-10 col-md-6 col-lg-4">
                     <div class="team-item">
                         <div class="team-thumb">
@@ -126,14 +173,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!--============= Team Section Ends Here =============-->
 
 
     <!--============= Client Section Starts Here =============-->
-    <section class="client-section padding-bottom">
+    <!-- <section class="client-section padding-bottom">
         <div class="container">
             <div class="section-header">
                 <h2 class="title">10,000 Happy Clients around the World</h2>
@@ -293,7 +340,7 @@
                 </div> -->
             </div>
         </div>
-    </section>
+    </section> -->
     <!--============= Client Section Ends Here =============-->
 
 
@@ -362,7 +409,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="faq.html">Faqs</a>
+                                    <a href="faq.html">Services</a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us</a>
