--- a/contact.html
+++ b/contact.html
@@ -1,144 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>UNAZ - Unaz Services</title>
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/nice-select.css">
-    <link rel="stylesheet" href="assets/css/owl.min.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/flaticon.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/animate.css" />
+    <link rel="stylesheet" href="assets/css/nice-select.css" />
+    <link rel="stylesheet" href="assets/css/owl.min.css" />
+    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
+    <link rel="stylesheet" href="assets/css/flaticon.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-</head>
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.png"
+      type="image/x-icon"
+    />
+  </head>
 
-<body>
+  <body>
     <!--============= ScrollToTop Section Starts Here =============-->
     <div class="overlayer" id="overlayer">
-        <div class="loader">
-            <div class="loader-inner"></div>
-        </div>
+      <div class="loader">
+        <div class="loader-inner"></div>
+      </div>
     </div>
     <a href="#0" class="scrollToTop"><i class="fas fa-angle-up"></i></a>
     <div class="overlay"></div>
     <!--============= ScrollToTop Section Ends Here =============-->
 
-
     <!--============= Header Section Starts Here =============-->
     <header class="header-section">
-        <div class="container">
-            <div class="header-wrapper">
-                <div class="logo-area">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="assets/images/logo/logo.png" alt="logo">
-                        </a>
-                    </div>
-                    <!-- <div class="support">
+      <div class="container">
+        <div class="header-wrapper">
+          <div class="logo-area">
+            <div class="logo">
+              <a href="index.html">
+                <img src="assets/images/logo/logo.png" alt="logo" />
+              </a>
+            </div>
+            <!-- <div class="support">
                         <a href="#0">Help Center</a>
                     </div> -->
-                </div>
-                <ul class="menu">
-                    <li class="navlist ">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li class="navlist">
-                        <a href="faq.html">Faqs</a>
-                    </li>
-                    <li class="navlist">
-                        <a href="about.html">About Us</a>
-                    </li>
-                    <li class="navlist navactive">
-                        <a href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
+          </div>
+          <ul class="menu">
+            <li class="navlist">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="navlist">
+              <a href="faq.html">Services</a>
+            </li>
+            <li class="navlist">
+              <a href="about.html">About Us</a>
+            </li>
+            <li class="navlist navactive">
+              <a href="contact.html">Contact Us</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </header>
     <!--============= Header Section Ends Here =============-->
 
     <!--============= Hero Section Starts Here =============-->
-    <div class="hero-section bg_img style-two" data-background="assets/images/banner/page-header.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-8 col-md-10">
-                    <div class="cate-header cl-white">
-                        <h1 class="cate-title">Contact our Online Support Desk</h1>
-                        <p>Can’t find the answer you’re looking for? Don't worry! Get in touch with the Docs Support
-                            team, we will be glad to assist you.</p>
-                    </div>
-                </div>
+    <div
+      class="hero-section bg_img style-two"
+      data-background="assets/images/banner/page-header.jpg"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-8 col-md-10">
+            <div class="cate-header cl-white">
+              <h1 class="cate-title">Contact our Online Support Desk</h1>
+              <p>
+                Can’t find the answer you’re looking for? Don't worry! Get in
+                touch with the Docs Support team, we will be glad to assist you.
+              </p>
             </div>
+          </div>
         </div>
+      </div>
     </div>
     <!--============= Hero Section Ends Here =============-->
 
-
     <!--============= Contact Section Starts Here =============-->
     <div class="contact-form-section padding-bottom pos-rel">
-        <div class="container">
-            <div class="contact-wrapper oh mt--160">
-                <div class="contact-header">
-                    <h5 class="title">Contact Information</h5>
-                    <div class="contact-info-area">
-                        <div class="contact-info-item">
+      <div class="container">
+        <div class="contact-wrapper oh mt--160">
+          <div class="contact-header">
+            <h3 class="title contactinfo">Contact Information</h3>
+            <div class="contact-info-area">
+              <div class="aboutcontent col-12 col-lg-12 col-sm-12 col-md-12">
+                <h5 class="title">UK Head Office</h5>
+                <a href="Tel:00447809211082">
+                  <img
+                    src="assets/images/contact/01.png"
+                    width="35"
+                    height="35"
+                    alt="contact"
+                  />
+                  <span>(44)780-9211082</span> </a
+                ><br />
+                <span>90 Keppel Road London E6 2BE</span>
+              </div>
+              
+              <div class="aboutcontent col-12 col-lg-12 col-sm-12 col-md-12 mt-1">
+                  <hr>
+                <h5 class="title">Nowshera KPK Office</h5>
+                <a href="Tel:0092923644012">
+                  <img
+                    src="assets/images/contact/01.png"
+                    width="35"
+                    height="35"
+                    alt="contact"
+                  />
+                  <span>(92)923-644012</span> </a
+                ><br />
+                <span
+                  >1st Floor UNAZ Plaza, Opposite Nowshera Kanta, Nowshera
+                  Mardan Road, Kabul River Nowshera City</span
+                >
+              </div>
+              <div class="aboutcontent col-12 col-lg-12 col-sm-12 col-md-12 mt-1">
+                  <hr>
+                <h5 class="title">Faisalabad Punjab Office</h5>
+                <a href="Tel:+92-41-8401701">
+                  <img
+                    src="assets/images/contact/01.png"
+                    width="35"
+                    height="35"
+                    alt="contact"
+                  />
+                  <span>(92)41-8401701</span> </a
+                ><br />
+                <span
+                  >AIKSOL 1st Floor, Nabeel Plaza, Jhumra road, Block Z Abdullah
+                  Pur Faisalabad, Pakistan.</span
+                >
+              </div>
+
+              <!--  <div class="contact-info-item">
                             <a href="Tel:0123012015200">
                                 <img src="assets/images/contact/01.png" alt="contact">
                                 <span>(92)923-644012</span>
                             </a>
                         </div>
                         <div class="contact-info-item">
-                            <a href="Mailto:contact@deskoto.com">
+                            <a>
                                 <img src="assets/images/contact/02.png" alt="contact">
                                 <span>1st Floor UNAZ Plaza, Opposite Nowshera Kanta, Nowshera Mardan Road, Kabul River Nowshera City</span>
                             </a>
-                        </div>
-                        
-                    </div>
-                </div>
-                <form class="contact-form row" id="contact_form_submit">
-                    <div class="form-group col-md-6">
-                        <label for="name">First Name</label>
-                        <input type="text" id="name" name="name">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="lastname">Last Name</label>
-                        <input type="text" id="lastname" name="name">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="phone">Phone Number</label>
-                        <input type="text" id="phone" name="phone">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="email">Email Address</label>
-                        <input type="text" id="email" name="email">
-                    </div>
-                    <div class="form-group col-md-12">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message"></textarea>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <div class="form-submit">
-                            <button type="submit" class="custom-button">Send Email</button>
-                            <p>Need a quick answer? <a href="faq.html">Your answer might be in our FAQs.</a></p>
-                        </div>
-                    </div>
-                </form>
+                        </div> -->
             </div>
+          </div>
+          <form class="contact-form row" id="contact_form_submit">
+            <div class="form-group col-md-6">
+              <label for="name">First Name</label>
+              <input type="text" id="name" name="name" />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="lastname">Last Name</label>
+              <input type="text" id="lastname" name="name" />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="phone">Phone Number</label>
+              <input type="text" id="phone" name="phone" />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="email">Email Address</label>
+              <input type="text" id="email" name="email" />
+            </div>
+            <div class="form-group col-md-12">
+              <label for="message">Message</label>
+              <textarea id="message" name="message"></textarea>
+            </div>
+            <div class="form-group col-md-12">
+              <div class="form-submit">
+                <button type="submit" class="custom-button">Send Email</button>
+                <p>
+                  Need a quick answer?
+                  <a href="faq.html">Your answer might be in our FAQs.</a>
+                </p>
+              </div>
+            </div>
+          </form>
         </div>
+      </div>
     </div>
     <!--============= Contact Section Ends Here =============-->
-
 
     <!--============= Have Questions Section Starts Here =============-->
     <!-- <div class="have-questions-section mb--70--145">
@@ -161,77 +215,93 @@
     </div> -->
     <!--============= Have Questions Section Ends Here =============-->
 
-
     <!--============= Footer Section Starts Here =============-->
     <footer class="footer-section pt-70-145">
-        <div class="dot-slider bg_img" data-background="assets/css/img/footer-dots.png"></div>
-        <div class="container">
-            <div class="footer-top cl-white padding-bottom padding-top">
-                <div class="row mb--50 justify-content-between">
-                    <div class="col-sm-8 col-lg-4">
-                        <div class="footer-widget widget-about">
-                            <div class="logo-area">
-                                <div class="logo">
-                                    <a href="index.html"><img src="assets/images/logo/logo.png" alt="logo"></a>
-                                </div>
-                                <div class="support">
-                                    <a href="#0">Help Center</a>
-                                </div>
-                            </div>
-                            <p> UNAZ is a saas application which helps you to automate you
-                                business and find solution to your problems.</p>
-                            <ul class="social-icons">
-                                <li>
-                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0" class="active"><i class="fab fa-pinterest-p"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0" class=""><i class="fab fa-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-8 col-md-4 col-lg-3 offset-lg-1">
-                        <div class="footer-widget widget-link">
-                            <h5 class="title">Menu</h5>
-                            <ul>
-                                <li>
-                                    <a href="index.html">Home</a>
-                                </li>
-
-                                <li>
-                                    <a href="faq.html">Faqs</a>
-                                </li>
-                                <li>
-                                    <a href="about.html">About Us</a>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact Us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-8 col-lg-4">
-                        <div class="footer-widget widget-newsletter">
-                            <iframe style="border-radius: 10px;"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.130907594492!2d71.98471161521408!3d34.014850580616205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDAwJzUzLjUiTiA3McKwNTknMTIuOCJF!5e0!3m2!1sen!2s!4v1614070265702!5m2!1sen!2s"
-                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </div>
-                    </div>
+      <div
+        class="dot-slider bg_img"
+        data-background="assets/css/img/footer-dots.png"
+      ></div>
+      <div class="container">
+        <div class="footer-top cl-white padding-bottom padding-top">
+          <div class="row mb--50 justify-content-between">
+            <div class="col-sm-8 col-lg-4">
+              <div class="footer-widget widget-about">
+                <div class="logo-area">
+                  <div class="logo">
+                    <a href="index.html"
+                      ><img src="assets/images/logo/logo.png" alt="logo"
+                    /></a>
+                  </div>
+                  <div class="support">
+                    <a href="#0">Help Center</a>
+                  </div>
                 </div>
+                <p>
+                  UNAZ is a saas application which helps you to automate you
+                  business and find solution to your problems.
+                </p>
+                <ul class="social-icons">
+                  <li>
+                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li>
+                    <a href="#0" class="active"
+                      ><i class="fab fa-pinterest-p"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#0" class=""><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="#0"><i class="fab fa-instagram"></i></a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="footer-bottom cl-white">
-                <p>Copyright &copy; 2021 <a href="#0">UNAZ</a> - Designed by <a href="https://aiksol.com">AIKSOL</a></p>
+            <div class="col-sm-8 col-md-4 col-lg-3 offset-lg-1">
+              <div class="footer-widget widget-link">
+                <h5 class="title">Menu</h5>
+                <ul>
+                  <li>
+                    <a href="index.html">Home</a>
+                  </li>
+
+                  <li>
+                    <a href="faq.html">Services</a>
+                  </li>
+                  <li>
+                    <a href="about.html">About Us</a>
+                  </li>
+                  <li>
+                    <a href="contact.html">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
             </div>
+            <div class="col-sm-8 col-lg-4">
+              <div class="footer-widget widget-newsletter">
+                <iframe
+                  style="border-radius: 10px"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.130907594492!2d71.98471161521408!3d34.014850580616205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDAwJzUzLjUiTiA3McKwNTknMTIuOCJF!5e0!3m2!1sen!2s!4v1614070265702!5m2!1sen!2s"
+                  width="400"
+                  height="300"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                ></iframe>
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="footer-bottom cl-white">
+          <p>
+            Copyright &copy; 2021 <a href="#0">UNAZ</a> - Designed by
+            <a href="https://aiksol.com">AIKSOL</a>
+          </p>
+        </div>
+      </div>
     </footer>
     <!--============= Footer Section Ends Here =============-->
-
 
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/modernizr-3.6.0.min.js"></script>
@@ -244,6 +314,5 @@
     <script src="assets/js/magnific-popup.min.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
