--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="navlist navactive">
-                        <a href="faq.html">Faqs</a>
+                        <a href="faq.html">Services</a>
                     </li>
                     <li class="navlist">
                         <a href="about.html">About Us</a>
@@ -108,12 +108,12 @@
                     <aside class="sticky-menu">
                         <div class="faq-menu bg_img mb-30" data-background="assets/images/faq/faq-menu.png">
                             <ul id="faq-menu">
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="#company">OUR VISION</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#freelancer">VALUES</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="#account">SERVICES</a>
                                 </li>
@@ -128,7 +128,7 @@
                                 </li>  -->
                             </ul>
                         </div>
-                        <div class="faq-video">
+                        <!-- <div class="faq-video">
                             <a href="https://www.youtube.com/watch?v=GT6-H4BRyqQ" class="video-area popup">
                                 <img src="assets/images/faq/video.png" alt="faq">
                                 <div class="video-button-2">
@@ -140,12 +140,12 @@
                                 </div>
                             </a>
                             <h5 class="title">Watch Video Tour</h5>
-                        </div>
+                        </div> -->
                     </aside>
                 </div>
                 <div class="col-lg-8 col-xl-7">
                     <article class="mt-70 mt-lg-0">
-                        <div class="faq--wrapper" id="company">
+                        <!-- <div class="faq--wrapper" id="company">
                             <h3 class="main-title">Our Vision</h3>
                             <div class="faq--area">
                                 <div class="faq--item">
@@ -174,7 +174,7 @@
                                             employees and market partners to grow personally and professionally.</p>
                                     </div>
                                 </div>
-                                <!-- <div class="faq--item">
+                                <div class="faq--item">
                                     <div class="faq-title">
                                         <h6 class="title">Values We Have</h6>
                                         <span class="icon"></span>
@@ -184,10 +184,10 @@
                                             with the honour of our commitments to the clients, valuable resources,
                                             employees, and users.</p>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
-                        </div>
-                        <div class="faq--wrapper" id="freelancer">
+                        </div> -->
+                        <!-- <div class="faq--wrapper" id="freelancer">
                             <h3 class="main-title">Values of Unaz</h3>
                             <div class="faq--area">
                                 <div class="faq--item">
@@ -237,7 +237,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="faq--wrapper" id="account">
                             <h3 class="main-title">Services We Provide</h3>
                             <div class="faq--area">
@@ -570,7 +570,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="faq.html">Faqs</a>
+                                    <a href="faq.html">Services</a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us</a>
