Content added for services

--- a/faq.html
+++ b/faq.html
@@ -241,7 +241,7 @@
                         <div class="faq--wrapper" id="account">
                             <h3 class="main-title">Services We Provide</h3>
                             <div class="faq--area">
-                                <div class="faq--item">
+                                <div class="faq--item open active">
                                     <div class="faq-title">
                                         <h6 class="title">Criminal</h6>
                                         <span class="icon"></span>
@@ -262,7 +262,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="faq--item open active">
+                                <div class="faq--item">
                                     <div class="faq-title">
                                         <h6 class="title">Our criminal law services in all over Pakistan</h6>
                                         <span class="icon"></span>
@@ -394,6 +394,68 @@
                             <div class="faq--area">
                                 <div class="faq--item">
                                     <div class="faq-title">
+                                        <h6 class="title">Business Management, Tax and Legal Compliance</h6>
+                                        <span class="icon"></span>
+                                    </div>
+                                    <div class="faq-content">
+                                        <p>We help business individuals in registering their business as Partnership,
+                                            Sole Proprietorship, SMC, Public Limited Company, Pvt. Limited Company
+                                            etc.We offer our services as legal advisor to companies. We also provide
+                                            services of filing sales tax returns and income tax returns. Our Corporate
+                                            Services Incl...<span><a class="readmorelink"
+                                                    href="BusinessManagement.html">Read More</a></span></p>
+                                    </div>
+                                </div>
+                                <div class="faq--item">
+                                    <div class="faq-title">
+                                        <h6 class="title">Income Tax Services</h6>
+                                        <span class="icon"></span>
+                                    </div>
+                                    <div class="faq-content">
+                                        <p>We provide
+                                            services of filing income tax returns. Our Corporate
+                                            Services Include Corporate Consultancy Company registration (Public and
+                                            Private including single member) fro...<span><a class="readmorelink"
+                                                    href="IncomeTax.html">Read More</a></span></p>
+                                    </div>
+                                </div>
+                                <div class="faq--item">
+                                    <div class="faq-title">
+                                        <h6 class="title">General Sales Tax Services</h6>
+                                        <span class="icon"></span>
+                                    </div>
+                                    <div class="faq-content">
+                                        <p>We provide
+                                            services of filing sales tax returns. Our Corporate
+                                            Services Include Corporate Consultancy Company registration (Public and
+                                            Private including single member) fro...<span><a class="readmorelink"
+                                                    href="SalesTax.html">Read More</a></span></p>
+                                    </div>
+                                </div>
+                                <div class="faq--item">
+                                    <div class="faq-title">
+                                        <h6 class="title">Company/Firm Registration</h6>
+                                        <span class="icon"></span>
+                                    </div>
+                                    <div class="faq-content">
+                                        <p>We help business individuals in registering their business as Partnership,
+                                            Sole Proprietorship, SMC, Public Limited Company, Pvt. Limited Company etc.
+                                            We also help our clients in getting their Trademark/logo registrati...<span><a class="readmorelink"
+                                                    href="CompanyRegistration.html">Read More</a></span></p>
+                                    </div>
+                                </div>
+                                <div class="faq--item">
+                                    <div class="faq-title">
+                                        <h6 class="title">Intellectual Property Services</h6>
+                                        <span class="icon"></span>
+                                    </div>
+                                    <div class="faq-content">
+                                        <p> We help our clients in getting their Trademark/logo registration and also patent their pro...<span><a class="readmorelink"
+                                                    href="IntellectualProperty.html">Read More</a></span></p>
+                                    </div>
+                                </div>
+                                <!-- <div class="faq--item">
+                                    <div class="faq-title">
                                         <h6 class="title">Company/Firm Registration</h6>
                                         <span class="icon"></span>
                                     </div>
@@ -402,48 +464,37 @@
                                             Sole Proprietorship, SMC, Public Limited Company, Pvt. Limited Company etc.
                                             We also help our clients in getting their Trademark/logo registration.</p>
                                         <br>
-                                        <p>• We offer our services as legal advisor to companies. We also provide
+                                        <p>We offer our services as legal advisor to companies. We also provide
                                             services of filing sales tax returns and income tax returns. Our Corporate
                                             Services Include Corporate Consultancy Company registration (Public and
                                             Private including single member) from SECP – Annual Forms filling (Form A
                                             Form 29 etc) – Others forms filings – including Foreign
                                             Company/Branch/Liaison Office Registration in Pakistan</p>
-                                        <p>• Tax/Corporate Consultancy for Foreign Companies/Businesses in
+                                        <p>Tax/Corporate Consultancy for Foreign Companies/Businesses in
                                             Pakistan-Chinese/Foreign Company Registration in Pakistan
                                         </p>
                                         <p>• NTN Number , AOPp Firm Registration</p>
-                                        <p>•	Partnership Firm Registration</p>
-                                        <p>•	Registered Company Registration</p>
-                                        <p>•	Sole Proprietorship Firm Registration</p>
-                                        <p>•	Sole Trader ship Firm Registration</p>
-                                        <p>•	Single Owner Firm Registration</p>
-                                        <p>•	Income Tax Return e-Filling</p> 
-                                        <p>•	Sales Tax Return e-Filling</p>
-                                        <p>•	Company Registration</p>
-                                        <p>•	Chamber Registration</p>
-                                        <p>•	Chamber of Commerce (LCCI) Membership</p>
-                                        <p>•	GST Number</p>
-                                        <p>•	PRA Registration</p>
-                                        <p>•	Logo Registration</p>
-                                        <p>•	Trust Registration</p>
-                                        <p>•	Copyright Registration</p>
-                                        <p>•	Trademark Registration</p>
-                                        <p>•	Patent Registration</p>
+                                        <p>• Partnership Firm Registration</p>
+                                        <p>• Registered Company Registration</p>
+                                        <p>• Sole Proprietorship Firm Registration</p>
+                                        <p>• Sole Trader ship Firm Registration</p>
+                                        <p>• Single Owner Firm Registration</p>
+                                        <p>• Income Tax Return e-Filling</p>
+                                        <p>• Sales Tax Return e-Filling</p>
+                                        <p>• Company Registration</p>
+                                        <p>• Chamber Registration</p>
+                                        <p>• Chamber of Commerce (LCCI) Membership</p>
+                                        <p>• GST Number</p>
+                                        <p>• PRA Registration</p>
+                                        <p>• Logo Registration</p>
+                                        <p>• Trust Registration</p>
+                                        <p>• Copyright Registration</p>
+                                        <p>• Trademark Registration</p>
+                                        <p>• Patent Registration</p>
                                     </div>
-                                </div>
-                                <!-- <div class="faq--item">
-                                    <div class="faq-title">
-                                        <h6 class="title">How do I disable installed apps?</h6>
-                                        <span class="icon"></span>
-                                    </div>
-                                    <div class="faq-content">
-                                        <p>A successful marketing plan relies heavily on the pulling-power of
-                                            advertising copy. Writing result-oriented ad copy is difficult, as it must
-                                            appeal to, entice, and convince consumers to take action. There is no magic
-                                            formula to write perfect ad copy.</p>
-                                    </div>
-                                </div>
-                                <div class="faq--item">
+                                </div> -->
+
+                                <!--   <div class="faq--item">
                                     <div class="faq-title">
                                         <h6 class="title">How do I disable installed apps?</h6>
                                         <span class="icon"></span>
